--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,13 @@ body {
     width: 100vw;
     height: 100vh;
     background: linear-gradient(#001f3f, #0074D9);
+
+    font-family: sans-serif;
+    user-select: none;
+}
+
+button {
+    all: unset;
 }
 
 header {
@@ -23,13 +30,12 @@ header ul {
 
 header li {
     padding: none;
-    font-family: sans-serif;
     font-size: 48px;
     color: lightgrey;
     cursor: auto;
 }
 
-.game-button {
+.rps-select-button {
     all: unset;
     font-size: 128px;
 
@@ -38,7 +44,7 @@ header li {
     display: none;
 }
 
-.game-button:hover {
+.rps-select-button:hover {
     transform: scale(1.1);
     background-color: rgba(0, 0, 0, 0.05);
     border-radius: 50%;
@@ -59,10 +65,13 @@ header li {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .win-message {
-    font-family: sans-serif;
+    display: none;
+    
     font-weight: bold;
     font-size: 56px;
     padding: .2em;
@@ -72,4 +81,44 @@ header li {
 #desc-message {
     font-size: 38px;
     color: darkgray;
+}
+
+#gamestart-button {
+    background-color: #3D9970;
+    font-size: 3em;
+    font-weight: bold;
+    padding: 1rem;
+    cursor: pointer;
+}
+
+#gamestart-button:hover {
+    background-color: #2ECC40;
+}
+
+.game-hand {
+    display: none;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 128px;
+    /*animation: handshake-animation .3s 2;*/
+}
+
+.player-rps {
+    transform: translate(-250%, -50%) scale(-1, 1) rotate(-90deg);
+}
+
+.computer-rps {
+    transform: translate(150%, -50%) rotate(-90deg);
+}
+
+@keyframes hand-animation {
+    0% {
+        top: -25%;
+    }
+
+    100% {
+        top: 50%;
+    }
 }
